src/objects/C501_Contact_Merge__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Merges</relationshipLabel>
        <relationshipName>Contact_Merges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merge_Action__c</fullName>
        <label>Merge Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C501_Merge_Actions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merge_Confidence__c</fullName>
        <label>Merge Confidence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Merge_Metric_Name__c</fullName>
        <label>Merge Metric Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Metric__c</fullName>
        <label>Merge Metric</label>
        <referenceTo>C501_Merge_Metric__c</referenceTo>
        <relationshipLabel>Contact Merges</relationshipLabel>
        <relationshipName>Contact_Merges</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merge_Target_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merge Target Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Merges (Merge Target Contact)</relationshipLabel>
        <relationshipName>Contact_Merge_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <label>Unique Id</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Contact Merge</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Merge-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Merges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>